--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.003   2021-02-26  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [build] Rebuild with Dist::Zilla plugin [Module::Features].
+
+
 0.002   2021-02-25  Released-By: PERLANCAR; Urgency: low
 
         - No functional changes.
